# model-bridge

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  pyproject.toml
.github/: copilot-instructions.md
docs/: API_CN.md  API_EN.md
src/model_bridge/: __init__.py  cli.py  config.py  core.py  decorator.py  metadata.py  ranker.py  utils.py
src/model_bridge/scanner/: __init__.py  base.py  engine.py  strategies.py
tests/: test_core.py  test_decorator.py  test_metadata.py  test_ranker.py  test_scanner.py
